--- a/app/src/main/res/layout/dialog_service.xml
+++ b/app/src/main/res/layout/dialog_service.xml
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/service_1"
-        android:textColor="@color/colorBlue"
+        android:textColor="#ff0f53af"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="@id/frame_service1"
         app:layout_constraintStart_toEndOf="@id/iv_service1"
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/service_2"
-        android:textColor="@color/colorBlue"
+        android:textColor="#ff0f53af"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="@id/frame_service2"
         app:layout_constraintStart_toEndOf="@id/iv_service2"
