[fix] 23675 英文首頁體育賽事頁面需修改(部分ui與h5尺寸一致故不調整)

--- a/app/src/main/res/layout/publicity_title_view.xml
+++ b/app/src/main/res/layout/publicity_title_view.xml
@@ -44,8 +44,8 @@
             android:paddingEnd="4dp">
 
             <ImageView
-                android:layout_width="@dimen/margin_18"
-                android:layout_height="@dimen/margin_18"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_16"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="2dp"
                 android:src="@drawable/ic_icon_events" />
@@ -53,11 +53,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="6dp"
                 android:gravity="center"
                 android:text="@string/recommend_match"
                 android:textColor="@color/white"
-                android:textSize="@dimen/textSize12sp" />
+                android:textSize="@dimen/textSize12sp"
+                android:lineSpacingExtra="6dp"/>
 
         </LinearLayout>
 
@@ -71,8 +72,8 @@
             android:paddingEnd="4dp">
 
             <ImageView
-                android:layout_width="@dimen/margin_18"
-                android:layout_height="@dimen/margin_18"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_16"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="2dp"
                 android:src="@drawable/ic_icon_odds" />
@@ -80,11 +81,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="6dp"
                 android:gravity="center"
                 android:text="@string/recommend_best_odd"
                 android:textColor="@color/white"
-                android:textSize="@dimen/textSize12sp" />
+                android:textSize="@dimen/textSize12sp"
+                android:lineSpacingExtra="6dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -97,8 +99,8 @@
             android:paddingEnd="4dp">
 
             <ImageView
-                android:layout_width="@dimen/margin_18"
-                android:layout_height="@dimen/margin_18"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_16"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="2dp"
                 android:src="@drawable/ic_icon_safe" />
@@ -106,11 +108,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="6dp"
                 android:gravity="center"
                 android:text="@string/recommend_safe"
                 android:textColor="@color/white"
-                android:textSize="@dimen/textSize12sp" />
+                android:textSize="@dimen/textSize12sp"
+                android:lineSpacingExtra="6dp" />
         </LinearLayout>
 
 
