--- a/app/src/main/res/layout/publicity_league_view.xml
+++ b/app/src/main/res/layout/publicity_league_view.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    tools:background="@drawable/img_home_title_soccer_background"
     tools:ignore="SpUsage, ContentDescription">
 
+    <View
+        android:id="@+id/publicity_league_bg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:background="@drawable/img_home_title_soccer_background"
+        />
+
     <TextView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/tvLeagueName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -19,14 +35,17 @@
         android:layout_weight="1"
         android:textAllCaps="true"
         android:textColor="@color/colorBlackLight"
-        android:textSize="@dimen/textSize16sp"
+        android:textSize="@dimen/textSize14sp"
         android:textStyle="bold"
         tools:text="欧洲足球锦标赛2020" />
 
     <ImageView
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/ivFlag"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginEnd="14dp"
         android:src="@drawable/ic_earth" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
