--- a/app/src/main/res/layout/publicity_sub_title_view.xml
+++ b/app/src/main/res/layout/publicity_sub_title_view.xml
@@ -12,7 +12,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="16dp"
         android:layout_marginStart="14dp"
         android:src="@drawable/ic_hot" />
 
