--- a/app/src/main/res/layout/content_rv_bank_list_crypto_edit.xml
+++ b/app/src/main/res/layout/content_rv_bank_list_crypto_edit.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="5dp"
     android:clipToPadding="false"
     app:cardCornerRadius="4dp"
-    app:cardElevation="6dp">
+    app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -72,8 +74,8 @@
 
                 <ImageView
                     android:id="@+id/img_edit_bank"
-                    android:layout_width="18dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
                     android:src="@drawable/ic_edit_card_button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +113,7 @@
                 android:id="@+id/ll_bind_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="28dp"
                 android:gravity="top"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent">
