--- a/app/src/main/res/layout/fragment_bank_list.xml
+++ b/app/src/main/res/layout/fragment_bank_list.xml
@@ -33,9 +33,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
+            android:clipToPadding="false"
             android:overScrollMode="never"
+            android:paddingBottom="10dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
             tools:itemCount="5"
