--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -113,6 +113,12 @@
             android:textColor="@color/color_A3A3A3_666666"
             android:textSize="@dimen/textSize14sp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginVertical="2dp"
+            android:background="@color/color_212121_ededed" />
+
     </LinearLayout>
 
     <ImageView
