--- a/app/src/main/res/layout/fragment_self_limit_froze.xml
+++ b/app/src/main/res/layout/fragment_self_limit_froze.xml
@@ -46,6 +46,7 @@
                 android:layout_marginBottom="@dimen/margin_10"
                 android:text="@string/self_limit_froze_content"
                 android:textColor="@color/color_e5e5e5_333333"
+                android:lineSpacingExtra="8dp"
                 android:textSize="@dimen/textSize12sp" />
 
             <LinearLayout
@@ -137,14 +138,14 @@
                 android:layout_marginTop="@dimen/margin_6"
                 android:layout_marginRight="@dimen/margin_14"
                 android:layout_marginBottom="@dimen/margin_6"
-                android:background="@drawable/enable_blue_gray_radius_4_button"
+                android:background="@drawable/bg_radius_4_button_withdraw_commission_blue"
                 android:enabled="false"
                 android:gravity="center"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:text="@string/btn_confirm"
                 android:textAllCaps="true"
-                android:textColor="@color/enable_blue_light_gray"
+                android:textColor="@color/color_317FFF_0760D4"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold" />
 
