--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -103,6 +103,7 @@
     <style name="NoUppercaseTab" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/textSize14sp</item>
     </style>
 
 </resources>
