--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -356,12 +356,11 @@
             android:layout_height="wrap_content"
             android:paddingEnd="@dimen/margin_10"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_living"
+            android:src="@drawable/ic_living_ffffff_de000000"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/league_odd_match_price_boost"
             app:layout_constraintTop_toTopOf="@id/guide_game_bottom"
-            app:tint="@color/color_A3A3A3_666666"
             tools:ignore="ContentDescription"
             tools:visibility="visible" />
 
@@ -385,10 +384,10 @@
             android:layout_height="wrap_content"
             android:drawablePadding="6dp"
             android:gravity="center"
-            android:textColor="@color/color_A3A3A3_666666"
+            android:textColor="@color/color_FFFFFF_DE000000"
             android:textSize="@dimen/textSize12sp"
             android:textStyle="bold"
-            app:drawableEndCompat="@drawable/ic_arrow_dark_right_v4"
+            app:drawableEndCompat="@drawable/ic_arrow_dark_right_fffff_de000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_animation"
             app:layout_constraintTop_toTopOf="@id/guide_game_bottom"
