--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -143,6 +143,7 @@
     <color name="color_e5e5e5_202020">@color/color_202020</color>
     <color name="color_e5e5e5_000000">@color/color_000000</color>
     <color name="color_FFFFFF_060F20">@color/color_060F20</color>
+    <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#40FFFFFF</color>
@@ -246,6 +247,7 @@
     <color name="color_F9DDDE">#F9DDDE</color>
     <color name="color_FFE136">#FFE136</color>
     <color name="color_B3000000">#B3000000</color>
+    <color name="color_DE000000">#DE000000</color>
 
     <!-- ======================================= -->
 
