--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -45,7 +45,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@color/color_191919_EEEFF0" />
+                    android:background="@color/color_666666_bcbcbc" />
 
                 <ImageView
                     android:id="@+id/iv_bank_icon"
@@ -81,7 +81,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             app:cardBackgroundColor="@color/color_191919_FCFCFC"
             app:cardCornerRadius="5dp"
             app:cardElevation="0dp">
@@ -91,19 +91,20 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:padding="10dp">
+                android:paddingTop="10dp"
+                android:paddingStart="14dp"
+                android:paddingBottom="14dp"
+                android:paddingEnd="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:minHeight="40dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
                         android:text="@string/title_name"
                         android:textColor="@color/color_FFFFFF_000000"
                         android:textSize="@dimen/textSize13sp" />
@@ -142,13 +143,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:minHeight="40dp"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
                         android:text="@string/title_account"
                         android:textColor="@color/color_FFFFFF_000000"
                         android:textSize="@dimen/textSize13sp" />
@@ -184,19 +184,17 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    tools:visibility="gone"
+                    android:layout_marginTop="2dp"
                     android:id="@+id/ll_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:minHeight="40dp"
-                    android:orientation="horizontal"
-                    android:paddingTop="9dp"
-                    android:paddingBottom="9dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="12dp"
                         android:text="@string/title_address"
                         android:textColor="@color/color_FFFFFF_000000"
                         android:textSize="@dimen/textSize13sp" />
@@ -214,65 +212,62 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginTop="2dp"
                     android:id="@+id/ll_qr"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/title_qr_pay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/title_qr_pay"
+                        android:textColor="@color/color_FFFFFF_000000"
+                        android:textSize="@dimen/textSize13sp" />
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:minHeight="40dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/title_qr_pay"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="12dp"
-                            android:text="@string/title_qr_pay"
-                            android:textColor="@color/color_FFFFFF_000000"
-                            android:textSize="@dimen/textSize13sp" />
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/tv_hint_qr_pay"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="@string/title_hint_qr_pay"
                             android:textColor="@color/color_FFFFFF_000000"
                             android:textSize="@dimen/textSize12sp" />
 
+                        <ImageView
+                            android:id="@+id/iv_address"
+                            android:layout_width="wrap_content"
+                            android:layout_height="110dp"
+                            android:maxHeight="110dp"
+                            android:maxWidth="110dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            tools:src="@drawable/ic_close_gray_blue" />
                     </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/iv_address"
-                        android:layout_width="match_parent"
-                        android:layout_height="110dp"
-                        android:maxHeight="110dp"
-                        android:maxWidth="110dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitCenter"
-                        tools:src="@drawable/ic_close_gray_blue" />
 
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="2dp"
                     android:id="@+id/ll_remark"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:minHeight="40dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/title_remark"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
                         android:text="@string/title_remark"
                         android:textColor="@color/color_FFFFFF_000000"
                         android:textSize="@dimen/textSize13sp" />
