--- a/app/src/main/res/layout/publicity_title_view.xml
+++ b/app/src/main/res/layout/publicity_title_view.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_B3000000"
-        android:minHeight="60dp"
+        android:minHeight="71dp"
         app:layout_constraintBottom_toBottomOf="@+id/banner"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -43,11 +43,11 @@
             android:paddingStart="4dp"
             android:paddingEnd="4dp">
 
+            <!--視覺調整改為16dp-->
             <ImageView
-                android:layout_width="@dimen/margin_18"
-                android:layout_height="@dimen/margin_18"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="3dp"
                 android:src="@drawable/ic_icon_events" />
 
             <TextView
@@ -71,11 +71,11 @@
             android:paddingStart="4dp"
             android:paddingEnd="4dp">
 
+            <!--視覺調整改為16dp-->
             <ImageView
-                android:layout_width="@dimen/margin_18"
-                android:layout_height="@dimen/margin_18"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="3dp"
                 android:src="@drawable/ic_icon_odds" />
 
             <TextView
@@ -98,11 +98,11 @@
             android:paddingStart="4dp"
             android:paddingEnd="4dp">
 
+            <!--視覺調整改為16dp-->
             <ImageView
-                android:layout_width="@dimen/margin_18"
-                android:layout_height="@dimen/margin_18"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="3dp"
                 android:src="@drawable/ic_icon_safe" />
 
             <TextView
