微調宣傳頁的 UI

--- a/app/src/main/res/layout/publicity_league_view.xml
+++ b/app/src/main/res/layout/publicity_league_view.xml
@@ -11,7 +11,7 @@
     <View
         android:id="@+id/publicity_league_bg"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,13 +25,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ivFlag"
         android:id="@+id/tvLeagueName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="15dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="15dp"
         android:layout_weight="1"
         android:textAllCaps="true"
         android:textColor="@color/color_e5e5e5_333333"
@@ -44,8 +43,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/ivFlag"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="23dp"
+        android:layout_height="23dp"
         android:layout_marginEnd="14dp"
         android:src="@drawable/ic_earth" />
 </androidx.constraintlayout.widget.ConstraintLayout>
