--- a/app/src/main/res/layout/content_rv_bank_list_edit.xml
+++ b/app/src/main/res/layout/content_rv_bank_list_edit.xml
@@ -6,12 +6,13 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:clipToPadding="false"
+    android:background="@drawable/shadow"
     app:cardCornerRadius="4dp"
-    app:cardElevation="6dp">
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="0dp"
