--- a/app/src/main/res/layout/content_rv_bank_list_new.xml
+++ b/app/src/main/res/layout/content_rv_bank_list_new.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:clipToPadding="false"
-    app:cardElevation="6dp"
+    android:background="@drawable/shadow"
+    app:cardElevation="0dp"
     app:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
