--- a/app/src/main/res/layout/content_rv_bank_list_new_no_card.xml
+++ b/app/src/main/res/layout/content_rv_bank_list_new_no_card.xml
@@ -8,12 +8,12 @@
     android:layout_marginTop="20dp"
     android:layout_marginEnd="20dp"
     android:layout_marginBottom="20dp"
-    android:elevation="10dp"
+    app:cardElevation="0dp"
     app:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="0dp"
