--- a/app/src/main/res/layout/fragment_bank_list.xml
+++ b/app/src/main/res/layout/fragment_bank_list.xml
@@ -31,10 +31,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_bank_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
