[Fix] home page ui & color

--- a/app/src/main/res/drawable-night/fillet_4dp_home_game_item_blue.xml
+++ b/app/src/main/res/drawable-night/fillet_4dp_home_game_item_blue.xml
@@ -4,7 +4,7 @@
     <corners android:radius="4dp" />
 
     <gradient
-        android:startColor="#33317FFF"
-        android:endColor="#66317FFF"
+        android:startColor="#00326e"
+        android:endColor="#005abe"
         android:angle="135"/>
 </shape>
