--- a/app/src/main/res/drawable/fillet_4dp_home_game_item_blue.xml
+++ b/app/src/main/res/drawable/fillet_4dp_home_game_item_blue.xml
@@ -4,7 +4,8 @@
     <corners android:radius="4dp" />
 
     <gradient
-        android:startColor="#003B79"
-        android:endColor="#0062C9"
+        android:startColor="#003b79"
+        android:endColor="#0062c9"
         android:angle="135"/>
+
 </shape>
