--- a/app/src/main/res/layout/home_game_table_bar.xml
+++ b/app/src/main/res/layout/home_game_table_bar.xml
@@ -26,8 +26,7 @@
         android:text="@string/home_tab_in_play2"
         android:textAllCaps="true"
         android:textColor="@color/selector_blue_gray_light"
-        android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold" />
+        android:textSize="@dimen/textSize16sp" />
 
     <RadioButton
         android:id="@+id/rb_as_start"
@@ -39,8 +38,7 @@
         android:text="@string/game_soon"
         android:textAllCaps="true"
         android:textColor="@color/selector_blue_gray_light"
-        android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold" />
+        android:textSize="@dimen/textSize16sp" />
 
     <View
         android:layout_width="0dp"
