--- a/app/src/main/res/layout/home_game_highlight_title.xml
+++ b/app/src/main/res/layout/home_game_highlight_title.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:layout_marginBottom="4dp">
+    android:layout_marginBottom="4dp"
+    tools:ignore="SpUsage" >
 
     <ImageView
         android:id="@+id/highlight_titleBar"
@@ -35,7 +37,7 @@
         android:text="@string/soccer"
         android:textAllCaps="true"
         android:textColor="@color/color_e5e5e5_333333"
-        android:textSize="@dimen/textSize15sp"
+        android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
