--- a/app/src/main/res/layout/home_game_recommend_bar.xml
+++ b/app/src/main/res/layout/home_game_recommend_bar.xml
@@ -24,8 +24,7 @@
         android:text="@string/label_match_recommend"
         android:textAllCaps="true"
         android:textColor="@color/color_317FFF_0760D4"
-        android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold" />
+        android:textSize="@dimen/textSize16sp" />
 
     <View
         android:layout_width="0dp"
