--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -395,8 +395,8 @@
 
         <ImageView
             android:id="@+id/league_odd_match_chart"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginEnd="5dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_chart"
@@ -408,10 +408,11 @@
 
         <ImageView
             android:id="@+id/league_odd_match_favorite"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_marginEnd="6dp"
             android:scaleType="centerCrop"
+            app:tint="@color/color_A3A3A3_666666"
             android:src="@drawable/selector_star_v4"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/guide_game_end"
