[fix] 23687 英文建議反饋中填寫建議頁面需修改, (建議反饋編輯筐內文字顏色夜間模式添加與h5相同、建議反饋大圖頁card背景夜間模式顏色替換)

--- a/app/src/main/res/layout/fragment_feedback_submit.xml
+++ b/app/src/main/res/layout/fragment_feedback_submit.xml
@@ -18,7 +18,9 @@
         android:gravity="top"
         android:maxLength="500"
         android:padding="14dp"
-        android:hint="@string/can_input_1_to_500_word" />
+        android:hint="@string/can_input_1_to_500_word"
+        android:textColor="@color/color_e5e5e5_333333"
+        android:textColorHint="@color/color_AEAEAE_545454"/>
 
     <include
         layout="@layout/view_submit_with_text_count"/>
