--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -144,6 +144,8 @@
     <color name="color_e5e5e5_000000">@color/color_000000</color>
     <color name="color_FFFFFF_060F20">@color/color_060F20</color>
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
+    <color name="color_B3FFFFFF_99000000">@color/transparent_black_60</color>
+    <color name="color_AEAEAE_545454">@color/color_AEAEAE</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#40FFFFFF</color>
@@ -234,6 +236,8 @@
     <color name="transparent_black_50">#80000000</color>
     <color name="transparent_black_60">#99000000</color>
 
+    <color name="transparent_white_70">#B3FFFFFF</color>
+
 <!--    <color name="color_fff3f3f3">#fff3f3f3</color>-->
 <!--    <color name="color_ffededed">#ffededed</color>-->
 <!--    <color name="color_888888">#888888</color>-->
@@ -248,6 +252,8 @@
     <color name="color_FFE136">#FFE136</color>
     <color name="color_B3000000">#B3000000</color>
     <color name="color_DE000000">#DE000000</color>
+    <color name="color_AEAEAE">#AEAEAE</color>
+    <color name="color_545454">#545454</color>
 
     <!-- ======================================= -->
 
