--- a/app/src/main/res/layout/custom_radio_button.xml
+++ b/app/src/main/res/layout/custom_radio_button.xml
@@ -5,7 +5,8 @@
     android:button="@null"
     android:background="@drawable/selector_tab"
     android:textColor="@color/selector_tab_text_color"
-    android:paddingHorizontal="10dp"
+    android:paddingHorizontal="6dp"
+    android:textSize="@dimen/textSize14sp"
     xmlns:tools="http://schemas.android.com/tools"
     tools:text="test">
 
