--- a/app/src/main/res/layout/view_game_tab_match_type_v4.xml
+++ b/app/src/main/res/layout/view_game_tab_match_type_v4.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:elevation="1dp"
     android:background="@color/color_141414_F3F4F5">
 
     <com.google.android.material.tabs.TabLayout
