--- a/app/src/main/res/layout/itemview_match_category_v4.xml
+++ b/app/src/main/res/layout/itemview_match_category_v4.xml
@@ -12,11 +12,11 @@
         android:layout_height="16dp"
         android:layout_marginStart="20dp"
         android:src="@drawable/ic_icon_today_w"
+        android:tint="@color/color_A3A3A3_666666"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"
-        app:tint="@color/color_666666" />
+        tools:ignore="ContentDescription,UseAppTint" />
 
     <TextView
         android:id="@+id/match_category_name"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:drawablePadding="6dp"
-        android:textColor="@color/color_FFFFFF_666666"
+        android:textColor="@color/color_A3A3A3_666666"
         android:textSize="@dimen/textSize14sp"
         android:textStyle="bold"
         app:drawableRightCompat="@drawable/ic_arrow_right_gray_v4"
