--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -67,9 +67,12 @@
     <color name="color_e5e5e5_202020">@color/color_e5e5e5</color>
     <color name="color_e5e5e5_000000">@color/color_e5e5e5</color>
     <color name="color_FFFFFF_060F20">@color/color_FFFFFF</color>
+
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
     <color name="color_B3FFFFFF_99000000">@color/transparent_white_70</color>
     <color name="color_AEAEAE_545454">@color/color_545454</color>
+    <color name="color_1E1E1E_FFFFFF">@color/color_1E1E1E</color>
+    <color name="color_383838_e5e5e5">@color/color_383838</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#1AFFFFFF</color>
