--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -143,9 +143,12 @@
     <color name="color_e5e5e5_202020">@color/color_202020</color>
     <color name="color_e5e5e5_000000">@color/color_000000</color>
     <color name="color_FFFFFF_060F20">@color/color_060F20</color>
+
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
     <color name="color_B3FFFFFF_99000000">@color/transparent_black_60</color>
     <color name="color_AEAEAE_545454">@color/color_AEAEAE</color>
+    <color name="color_1E1E1E_FFFFFF">@color/color_FFFFFF</color>
+    <color name="color_383838_e5e5e5">@color/color_e5e5e5</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#40FFFFFF</color>
@@ -254,6 +257,8 @@
     <color name="color_DE000000">#DE000000</color>
     <color name="color_AEAEAE">#AEAEAE</color>
     <color name="color_545454">#545454</color>
+    <color name="color_1E1E1E">#1E1E1E</color>
+    <color name="color_383838">#383838</color>
 
     <!-- ======================================= -->
 
