--- a/app/src/main/res/layout/sport_bottom_navigation.xml
+++ b/app/src/main/res/layout/sport_bottom_navigation.xml
@@ -57,7 +57,7 @@
 
             <TextView
                 android:id="@+id/tv_bet"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|bottom"
                 android:layout_marginBottom="5dp"
