--- a/app/src/main/res/layout/fragment_transaction_status.xml
+++ b/app/src/main/res/layout/fragment_transaction_status.xml
@@ -43,6 +43,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/tv_title"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
