--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -123,6 +123,7 @@
     <color name="color_666666_bcbcbc">@color/color_bcbcbc</color>
     <color name="color_616161_b4b4b4">@color/color_b4b4b4</color>
     <color name="color_8F8F8F_999999">@color/color_999999</color>
+    <color name="color_A3A3A3_999999">@color/color_999999</color>
     <color name="color_A3A3A3_666666">@color/color_666666</color>
     <color name="color_ADADAD_444444">@color/color_444444</color>
     <color name="color_E0E0E0_404040">@color/color_404040</color>
