[新增] Toolbar至賽事分析頁面, [修正] 23811 【Android】宣傳頁，點數據統計的icon，頂端列消失

--- a/app/src/main/res/layout/dialog_bottom_sheet_webview.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_webview.xml
@@ -8,6 +8,16 @@
     tools:ignore="WebViewLayout,spUsage,RtlSymmetry"
     tools:layout_gravity="bottom">
 
+    <!-- toolBar -->
+    <include
+        android:id="@+id/game_toolbar"
+        layout="@layout/view_toolbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/ll_content"
         android:layout_width="match_parent"
