[Fix] 修正星星點擊後變黑的問題

--- a/app/src/main/res/layout/home_game_table_item_4.xml
+++ b/app/src/main/res/layout/home_game_table_item_4.xml
@@ -389,8 +389,7 @@
         android:scaleType="centerCrop"
         android:src="@drawable/selector_star_v4"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/color_A3A3A3_666666" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
