--- a/app/src/main/res/drawable/ic_icon_statistics_ec.xml
+++ b/app/src/main/res/drawable/ic_icon_statistics_ec.xml
@@ -1,24 +1,39 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M1.6,11.6L4.9,11.6A1,1 0,0 1,5.9 12.6L5.9,22.4A1,1 0,0 1,4.9 23.4L1.6,23.4A1,1 0,0 1,0.6 22.4L0.6,12.6A1,1 0,0 1,1.6 11.6z"
-      android:strokeWidth="1.2"
-      android:fillColor="#00000000"
-      android:strokeColor="#1053af"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M19.1,7.6L22.4,7.6A1,1 0,0 1,23.4 8.6L23.4,22.4A1,1 0,0 1,22.4 23.4L19.1,23.4A1,1 0,0 1,18.1 22.4L18.1,8.6A1,1 0,0 1,19.1 7.6z"
-      android:strokeWidth="1.2"
-      android:fillColor="#00000000"
-      android:strokeColor="#1053af"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M10.1,0.6L13.9,0.6A1,1 0,0 1,14.9 1.6L14.9,22.4A1,1 0,0 1,13.9 23.4L10.1,23.4A1,1 0,0 1,9.1 22.4L9.1,1.6A1,1 0,0 1,10.1 0.6z"
-      android:strokeWidth="1.2"
-      android:fillColor="#00000000"
-      android:strokeColor="#1053af"
-      android:fillType="evenOdd"/>
+    android:width="28dp"
+    android:height="28dp"
+    android:viewportWidth="28"
+    android:viewportHeight="28">
+
+  <group
+      android:translateX="-293.000000"
+      android:translateY="-527.000000">
+    <group
+        android:translateX="295.000000"
+        android:translateY="529.000000">
+      <path
+          android:fillType="evenOdd"
+          android:pathData="M 0 0 H 24 V 24 H 0 V 0 Z"
+          android:strokeWidth="1" />
+      <group
+          android:translateX="3.000000"
+          android:translateY="3.000000">
+        <path
+            android:fillType="evenOdd"
+            android:pathData="M 1.92 8.97 L 2.955 8.97 Q 4.155 8.97 4.155 10.17 L 4.155 16.08 Q 4.155 17.28 2.955 17.28 L 1.92 17.28 Q 0.72 17.28 0.72 16.08 L 0.72 10.17 Q 0.72 8.97 1.92 8.97 Z"
+            android:strokeWidth="1.3"
+            android:strokeColor="#1053af" />
+        <path
+            android:fillType="evenOdd"
+            android:pathData="M 15.045 5.97 L 16.08 5.97 Q 17.28 5.97 17.28 7.17 L 17.28 16.08 Q 17.28 17.28 16.08 17.28 L 15.045 17.28 Q 13.845 17.28 13.845 16.08 L 13.845 7.17 Q 13.845 5.97 15.045 5.97 Z"
+            android:strokeWidth="1.3"
+            android:strokeColor="#1053af" />
+        <path
+            android:fillType="evenOdd"
+            android:pathData="M 8.295 0.72 L 9.705 0.72 Q 10.905 0.72 10.905 1.92 L 10.905 16.08 Q 10.905 17.28 9.705 17.28 L 8.295 17.28 Q 7.095 17.28 7.095 16.08 L 7.095 1.92 Q 7.095 0.72 8.295 0.72 Z"
+            android:strokeWidth="1.3"
+            android:strokeColor="#1053af" />
+      </group>
+    </group>
+  </group>
 </vector>
