--- a/app/src/main/res/layout/snackbar_my_favorite_notify.xml
+++ b/app/src/main/res/layout/snackbar_my_favorite_notify.xml
@@ -12,7 +12,7 @@
         android:layout_height="48dp"
         android:background="@color/color_317FFF_0760D4"
         android:gravity="center"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/myfavorite_notify_league_add" />
