--- a/app/src/main/res/layout/view_odds_detail_toolbar.xml
+++ b/app/src/main/res/layout/view_odds_detail_toolbar.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="SpUsage,RtlSymmetry,ContentDescription">
+    tools:ignore="SpUsage,RtlSymmetry,ContentDescription,UseAppTint">
 
     <data>
 
@@ -33,6 +33,7 @@
             android:layout_height="48dp"
             android:onClick="@{() -> fragment.back()}"
             android:padding="16dp"
+            android:tint="@color/color_E0E0E0_404040"
             android:src="@drawable/ic_arrow_left_game_back"
             app:layout_constraintBottom_toBottomOf="@+id/iv_title_bar"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +49,7 @@
             android:singleLine="true"
             android:text="@{gameViewModel.oddsDetailResult.peekContent().oddsDetailData.league.name}"
             android:textColor="@color/color_e5e5e5_333333"
-            android:textSize="@dimen/textSize18sp"
+            android:textSize="@dimen/textSize16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/iv_title_bar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +60,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="68dp"
+            android:minHeight="80dp"
             app:layout_constraintTop_toBottomOf="@+id/iv_title_bar">
 
             <ImageView
@@ -76,6 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginStart="@dimen/activity_vertical_margin"
+                android:gravity="center_vertical"
                 android:textColor="@color/color_FF9143_ff9200"
                 android:textSize="@dimen/textSize16sp"
                 android:visibility="gone"
@@ -88,11 +90,11 @@
             <TextView
                 android:id="@+id/tv_home_name"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginStart="@dimen/activity_vertical_margin"
-                android:layout_marginTop="10dp"
                 android:layout_marginEnd="5dp"
                 android:ellipsize="end"
+                android:gravity="center_vertical"
                 android:singleLine="true"
                 android:text="@{gameViewModel.oddsDetailResult.peekContent().oddsDetailData.matchOdd.matchInfo.homeName}"
                 android:textColor="@color/color_FFFFFF_FFFFFF"
@@ -168,12 +170,12 @@
                 android:id="@+id/tv_home_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:background="@color/color_E44438_e44438"
                 android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
                 android:visibility="gone"
-                android:layout_marginStart="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_home_name"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_home_name"
@@ -185,12 +187,12 @@
                 android:id="@+id/tv_away_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:background="@color/color_E44438_e44438"
                 android:textColor="@color/color_FFFFFF_FFFFFF"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
                 android:visibility="gone"
-                android:layout_marginStart="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_away_name"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_away_name"
@@ -204,6 +206,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginStart="@dimen/activity_vertical_margin"
+                android:gravity="center_vertical"
                 android:textColor="@color/color_FF9143_ff9200"
                 android:textSize="@dimen/textSize16sp"
                 android:visibility="gone"
@@ -216,11 +219,11 @@
             <TextView
                 android:id="@+id/tv_away_name"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_height="40dp"
+
                 android:layout_marginEnd="5dp"
-                android:layout_marginBottom="10dp"
                 android:ellipsize="end"
+                android:gravity="center_vertical"
                 android:singleLine="true"
                 android:text="@{gameViewModel.oddsDetailResult.peekContent().oddsDetailData.matchOdd.matchInfo.awayName}"
                 android:textColor="@color/color_FFFFFF_FFFFFF"
@@ -291,9 +294,9 @@
                     android:id="@+id/tv_time_bottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/time_null"
                     android:textColor="@color/color_cccccc"
-                    android:textSize="@dimen/textSize12sp"
-                    android:text="@string/time_null" />
+                    android:textSize="@dimen/textSize12sp" />
 
             </LinearLayout>
 
@@ -302,7 +305,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.78"/>
+                app:layout_constraintGuide_percent="0.78" />
 
             <TextView
                 android:id="@+id/tv_status_left"
@@ -314,9 +317,9 @@
                 android:textSize="@dimen/textSize12sp"
                 android:visibility="gone"
                 app:layout_constrainedWidth="true"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintEnd_toStartOf="@+id/guideline"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_away_name"
                 tools:text="第一節14-15 第二節15-14"
