--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -72,7 +72,8 @@
     <color name="color_B3FFFFFF_99000000">@color/transparent_white_70</color>
     <color name="color_AEAEAE_545454">@color/color_545454</color>
     <color name="color_1E1E1E_FFFFFF">@color/color_1E1E1E</color>
-    <color name="color_383838_e5e5e5">@color/color_383838</color>
+    <color name="color_404040_e5e5e5">@color/color_404040</color>
+    <color name="color_404348_EDEDED">@color/color_404348</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#1AFFFFFF</color>
