--- a/app/src/main/res/layout/content_security_code_style_edittext.xml
+++ b/app/src/main/res/layout/content_security_code_style_edittext.xml
@@ -18,7 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="@drawable/bg_radius_4dp_solid_fdfdfd_bg_e2e2e2"
             android:orientation="horizontal"
             android:padding="4dp">
@@ -27,7 +27,7 @@
                 android:id="@+id/img_ic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="6dp"
                 android:src="@drawable/ic_login_verify"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +39,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="@string/verification_code"
+                android:ellipsize="end"
+                android:maxWidth="60dp"
+                android:maxLines="1"
                 app:layout_constraintBottom_toBottomOf="@+id/img_ic"
                 app:layout_constraintStart_toEndOf="@+id/img_ic"
                 app:layout_constraintTop_toTopOf="@+id/img_ic"/>
@@ -47,7 +50,7 @@
                 android:id="@+id/edt_security_code"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:autofillHints="no"
@@ -83,8 +86,8 @@
 
                 <Button
                     android:id="@+id/btn_get_security"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="90dp"
+                    android:layout_height="32dp"
                     android:background="@drawable/btn_send_sms"
                     android:minHeight="32dp"
                     android:text="@string/get_security_code"
